--- a/styles/main.css
+++ b/styles/main.css
@@ -7,23 +7,53 @@
     list-style: none;
 }
 
+body {
+    background-color: rgb(205, 255, 228);
+}
+
 #home,
 .store-name {
     font-family: 'Georgia';
-    color: #4D5359;
 }
 
 /**************HOME PAGE****************/
 
-
+#home {
+    color: #4D5359;
+}
 
 
 
 /**************SALES PAGE****************/
+.store {
+    width: 300px;
+    display: inline-block;
+    background-color: #4A4238;
+    margin: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+}
 
-
+.store-name {
+    text-align: center;
+    margin-bottom: 10px;
+    color: #97DB4F;
+}
 
 .store-data {
     font-family: 'Arial';
+    font-weight: 600;
     color: #508484;
+}
+
+.store-data-item {
+    padding: 2px 10px;
+    box-sizing: border-box;
+}
+
+.total {
+    font-family: 'Raleway';
+    font-weight: 700;
+    color: #4A4238;
+    background-color: #97DB4F;
 }
