--- a/styles/main.css
+++ b/styles/main.css
@@ -64,6 +64,7 @@ body {
     margin: 100px 30vw 0 0;
     font-size: 1.4em;
     line-height: 30px;
+    text-align: justify;
 }
 
 .store-hours,
@@ -98,20 +99,31 @@ body {
 }
 
 .store-name {
-    text-align: center;
     margin-bottom: 10px;
     color: #97DB4F;
+    text-align: center;
 }
 
 .store-data {
     font-family: 'Arial';
     font-weight: 600;
     color: #508484;
+    width: 40%;
+    margin: auto;
 }
 
 .store-data-item {
     padding: 2px 10px;
     box-sizing: border-box;
+    text-align: justify;
+    overflow: hidden;
+    height: 15px;
+}
+
+.store-data-item:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
 }
 
 .total {
