--- a/styles/main.css
+++ b/styles/main.css
@@ -135,3 +135,26 @@ body {
     font-family: 'Raleway';
     font-weight: 700;
 }
+
+/********************SKEWS******************/
+
+.bottom-left {
+    -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
+    clip-path: polygon(0 0, 0% 100%, 100% 100%);
+    background-color: #97db4f50;
+    width: 400px;
+    height: 400px;
+    position: fixed;
+    bottom: 0;
+    z-index: -1;
+}
+
+.top {
+    -webkit-clip-path: polygon(0 0, 50% 0%, 0 100%);
+    clip-path: polygon(0 0, 50% 0%, 0 100%);
+    background-color: #97db4f80;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: -1;
+}
