--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,17 @@ html {
 
 body {
     background-color: #048ba850;
+    position: relative;
+    height: 100vh;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    line-height: 5vh;
+    height: 5vh;
 }
 
 #home,
