Added new images to imgs folder. Moved footer to js file to generate it on all subsequent pages.

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,7 @@ body {
     font-size: 1.4em;
     line-height: 30px;
     text-align: justify;
+    margin-left: 33.33%;
     margin-left: calc((100vw / 12) * 4);
     margin-top: 5vh;
 }
