Added mission statement to the home page. Also added the new pictures to the footer and styled them slightly.

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,12 @@ body {
     height: 5vh;
 }
 
+.footer-image {
+    width: 20px;
+    margin-left: 10px;
+    border-radius: 50%;
+}
+
 #home,
 .row,
 .heading {
