Added use strict statements to js files. Added html scaffolding for update store data form on sales.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -225,6 +225,8 @@ body {
     height: 100vh;
 }
 
+/*********DIFFERENT STYLES*********/
+
 body.different-style {
     background-color: limegreen;
 }
